# artivvis-development-repository

./: .gitignore
CPU Volume Renderer/: CPU Volume Renderer.sln
CPU Volume Renderer/CPU Volume Renderer/: CPU Volume Renderer.vcxproj  CPU Volume Renderer.vcxproj.filters  Camera.cpp  Camera.h  LightingFragShader.txt  RaycastFragShader.txt  ReadMe.txt  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SimpleFragShader.txt  SimpleVertShader.txt  StaticVolume.cpp  StaticVolume.h  TextureFragShader.txt  TextureVertShader.txt  VolumeFragShader.txt  main.cpp  stdafx.cpp
CUDAVisibility/: CUDAVisibility.sln
CUDAVisibility/CUDAVisibility/: CT-Knee_spectrum_16_balance.tfi  CUDAVisibility.vcxproj  CUDAVisibility.vcxproj.filters  Camera.cpp  Camera.h  CudaHeaders.h  GLM.h  GPURaycaster.cpp  GPURaycaster.h  IntensityTFOptimizer.cpp  IntensityTFOptimizer.h  RegionVisibility.cpp  RegionVisibility.h  ShaderManager.cpp  ShaderManager.h  TFOptimizer.h  TransFuncFragShader.txt  TransferFunction.cpp  TransferFunction.h  VisibilityFragShader.txt  VisibilityHist.cu  VisibilityHist.h  VisibilityTFOptimizer.cpp  VisibilityTFOptimizer.h  VisibilityVertShader.txt  VoxelReader.cpp  main.cpp
CUDAfluid/: CUDAfluid.sln
CUDAfluid/CUDAfluid/: CUDAfluid.vcxproj  CUDAfluid.vcxproj.filters  Camera.h  CellDataMatrix.cu  CellDataMatrix.h  Constants.cpp  Constants.h  Fluid.cu  Fluid.h  GPURaycaster.cpp  GPURaycaster.h  ShaderManager.cpp  ShaderManager.h  SimData.cu  SimData.h  SmokeFragShader.txt  TemperatureFragShader.txt  TemperatureVertShader.txt  main.cpp
Compact Volume Renderer/: Compact Volume Renderer.sln
Compact Volume Renderer/Compact Volume Renderer/: Compact Volume Renderer.vcxproj  Compact Volume Renderer.vcxproj.filters  GPURaycaster.cpp  GPURaycaster.h  OpenGLRenderer.cpp  OpenGLRenderer.h  ShaderManager.cpp  ShaderManager.h  TransferFunction.cpp  VolumeRenderer.cpp  VolumeRenderer.h  VoxelReader.cpp  main.cpp
DownSampler/: DownSampler.sln
DownSampler/DownSampler/: DownSampler.vcxproj  ReadMe.txt  main.cpp  stdafx.cpp
MeniscusProj/: MeniscusProj.sln
MeniscusProj/MeniscusProj/: Camera.cpp  Camera.h  ClipPlane.h  GPURaycaster.cpp  GPURaycaster.h  MeniscusProj.vcxproj  MeniscusProj.vcxproj.filters  OpenGLRenderer.cpp  OpenGLRenderer.h  Shader.cpp  ShaderManager.cpp  ShaderManager.h  TransFuncFragShader.txt  TransferFunction.cpp  VolumeRenderer.cpp  VolumeRenderer.h  VoxelReader.cpp  main.cpp
NetworkedVR/: NetworkedVR.sln
NetworkedVR/VRClient/: ClientMain.cpp  ClientNetworkManager.cpp  ClientNetworkManager.h  GLM.h  ImageProcessor.cu  ImageProcessor.h  ShaderManager.h  SqDiff_2_4_0_25.txt  SqDiff_2_4_0_50.txt  SqDiff_2_4_0_75.txt  SqDiff_2_5_0_25_new.txt  SqDiff_2_5_0_50_new.txt  SqDiff_2_5_0_75_new.txt  Texture2D.h  TransferFunction.cpp  VRClient.vcxproj  VRClient.vcxproj.filters  VolumeDataset.cpp  VolumeDataset.h  VolumeRenderer.cpp  VolumeRenderer.h
NetworkedVR/VRServer/: Framebuffer.h  FrequencyHistogram.h  ImageProcessor.cu  ImageProcessor.h  NetworkingMisc.h  Packet.h  ServerMain.cpp  ServerNetworkManager.cpp  ServerNetworkManager.h  ServerRenderer.cpp  ServerRenderer.h  ShaderManager.cpp  Socket.cpp  TCPSocket.cpp  TempCoherence.cu  TempCoherence.h  Texture2D.cpp  TransferFunction.cpp  UDPSocket.cpp  VRServer.vcxproj  VRServer.vcxproj.filters  VolumeDataset.cpp  VolumeDataset.h  VolumeRenderer.cpp  VolumeRenderer.h  VoxelReader.cpp  VoxelReader.h  dump.txt
RGBAVolume/: RGBAVolume.sln
RGBAVolume/RGBAVolume/: GPURaycaster.cpp  OpenGLRenderer.cpp  RGBAVolume.vcxproj  RGBAVolume.vcxproj.filters  (+4 more)
SliceBasedRenderer/: SliceBasedRenderer.sln
TempCoherencePredictor/: TempCoherencePredictor.sln  failed float attempt dump.txt
ThinClient/: ThinClient.sln
VisibilityProject/: VisibilityProject.sln
VolumeGI/: VolumeGI.sln
VolumeRenderer/: CMakeLists.txt  Call Order Document.rtf  VolumeRenderer.sln  VolumeRenderer_vs2012.sln  VolumeRenderer_vs2013.sln  VolumeRenderer_vs2015.sln
VolumeRenderer/TransferFunctionEditor/: AbstractGraphicsView.h  ControlEdge.h  ControlPoint.h  GradientView.h  HistogramPoint.h  HistogramView.h  MyGraphicsView.h  TransferFunctionEditor.vcxproj  TransferFunctionEditor.vcxproj.filters  TransferFunctionScene.h  TransferFunctionView.h  graphwidget.h  import_transfer_function_editor.h  import_volume_renderer.h  main.cpp  transferfunctioneditor.cpp  transferfunctioneditor.h  transferfunctioneditor.ui
VolumeRenderer/TransferFunctionEditor/GeneratedFiles/: qrc_transferfunctioneditor.cpp  ui_transferfunctioneditor.h
VolumeRenderer/VolumeRenderer/: BurnsContours.cpp  BurnsContours.h  CPURaycaster.cpp  CPURaycaster.h  CPURenderer.cpp  CPURenderer.h  Camera.cpp  Camera.h  CameraSerializer.h  ClassDiagram.cd  ClassDiagram1.cd  ComparisonFragShader.txt  ContourDrawer.h  ContourFragShader.txt  DepthFragShader.txt  DiffuseFragShader.txt  GPUContours.cpp  GPUContours.h  GPURaycaster.cpp  GPURaycaster.h  IntensityTFOptimizer.cpp  IntensityTFOptimizer.h  IntensityTFOptimizerPlus.h  IntensityTFOptimizerV2.cpp  IntensityTFOptimizerV2.h  JoesOGLRenderer.cpp  JoesOGLRenderer.h  LightingFragShader.txt  LineDepthFragShader.txt  LineDepthVertShader.txt  MarchingCubesRenderer.cpp  MarchingCubesRenderer.h  MarchingSurfaceFragShader.txt  MarchingSurfaceVertShader.txt  NormalsFragShader.txt  NormalsVertShader.txt  OpacityFragShader.txt  OpenGLRenderer.cpp  OpenGLRenderer.h  QtWidget.cpp  (+54 more)
VolumeRenderer/VolumeRenderer/GeneratedFiles/: qrc_transferfunctioneditor.cpp  qrc_volumerenderer.cpp  ui_transferfunctioneditor.h  ui_volumerenderer.h
VolumeRenderer/gl/: AntTweakBar.Win32.props  AntTweakBar.x64.props  OpenGL.props  SFML.props  cuda.props  readme.txt
VolumeRenderer/gl/include/: tinydir.h
data/: CTengine.mhd  CThead.mhd  Engine.mhd  Engine.tfi  MRbrain.mhd  MRknee.mhd  MRknee_8bit.mhd  MRknee_8bit.raw  Orbits.mhd  Orbits.raw  Orbits.tfi  VisMale_spectrum_4_balance_1000_region_1000.tfi  VisMale_spectrum_4_clipplane_region_1000.tfi  backpack8.mhd  backpack8.tfi  cube.mhd  cube.raw  disk.mhd  disk.raw  psi4.mhd  psi4.raw  readme.txt  tooth.tfi  tooth_balance.tfi
(+163 files in other folders)
